# artifact-calculator

./: Cargo.toml  README.md
artifact-calculator/: .gitignore  build.sh
artifact-calculator-java/: build.gradle
artifact-calculator-java/src/main/resources/: application.properties
artifact-calculator-java/src/main/resources/data/: data.db.mv.db  data.db.trace.db  scheme.sql
artifact-calculator-vite/: .eslintrc.cjs  package-lock.json  package.json  process.env
artifact-calculator-vite/src/: App.vue  main.js
artifact-calculator-vite/src/api/: artifact-api.js  calculator-api.js
artifact-calculator-vite/src/components/artifact/: artifact-form.vue  artifact-list.vue  artifact.js
artifact-calculator-vite/src/components/calculator/: artifact-calculator-double-suit.vue  artifact-calculator.vue  character-result.vue
artifact-calculator-vite/src/components/character/: character.js
artifact-calculator-vite/src/components/common/: calculator-footer.vue  calculator-header.vue
artifact-calculator-vite/src/components/weapon/: weapon.js
artifact-calculator/artifact-calculator-java/: .gitignore  build.gradle  settings.gradle
artifact-calculator/artifact-calculator-java/src/main/resources/: log4j.properties  (+1 more)
artifact-calculator/artifact-calculator-vite/: .eslintignore  .gitignore  electron-builder.yml  electron.vite.config.js  package-lock.json  package.json
artifact-calculator/artifact-calculator-vite/src/main/: index.js  service-utils.js
src/: artifact.rs  calculator.rs  character.rs  damage.rs  main.rs  monster.rs  preanalyzer.rs  reaction.rs  weapon.rs
(+80 files in other folders)
