[package]
name = "artifact-calculator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image="0.24.6"
imageproc = "0.23.0"
tesseract = "0.14.0"
unicode-segmentation = "1.10.1"
assert_approx_eq = "1.1.0"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
skeletonize = "0.2.0"
